# oximachinerunner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  requirements.txt  run_oximachine.py  setup.cfg  setup.py  test_oximachine.ipynb  versioneer.py
.github/: dependabot.yml
.github/workflows/: ci.yml  python-package.yml  pythonpackage.yml  release_me.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
assets/: predict.py
docs/: api.rst  conf.py  environment.yml  getting_started.rst  index.rst  requirements.txt  tutorials.rst
examples/: IDIWIB_clean.cif  SCSC_examples.ipynb  example.ipynb  guvzee.cif
examples/.ipynb_checkpoints/: example-checkpoint.ipynb
examples/scsc_examples/: 228082.cif  984134_c2x.cif  984135.cif
oximachinerunner/: __init__.py  _version.py  _widget.py  config.py  errors.py  featurize.py  learnmofox.py  utils.py  widget.py
oximachinerunner/assets/: 20200822-151455_scaler.joblib  20200822-151455_vt.joblib  scaler_0.joblib
oximachinerunner/assets/dense_feedforward_2020/trained_model_keras/: saved_model.pb
oximachinerunner/assets/dense_feedforward_2020/trained_model_keras/variables/: variables.data-00000-of-00001  variables.index
oximachinerunner/learnmofox/: utils.py
test/: test_oximachine.py
tests/: test_oximachine.py
