[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = "oximachinerunner"
dynamic = ['version']
description = "Run the oximachine"
authors = [
    { name = 'Kevin M. Jablonka' },
]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = '>=3.8'
dependencies = [
    'oximachine_featurizer>=0.4.0',
    'xgboost~=1.4',
    'requests'
]

[project.urls]
Homepage = "https://github.com/kjappelbaum/oximachine_featurizer"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "isort",
    "black",
]
docs = [
    "sphinx~=3.3.1",
    "sphinx-book-theme~=0.0.39",
    "sphinx-autodoc-typehints~=1.11.1",
    "sphinx-copybutton~=0.3.1",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{38, 39, 310, 311}

[testenv]
description = Run the pytest tests
deps = pytest
commands = pytest {posargs}
"""